--- a/app/package.json
+++ b/app/package.json
@@ -13,5 +13,8 @@
     "formidable": "^1.2.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
